@@ -139,6 +139,34 @@ G_MODULE_EXPORT gboolean linestack_send_object_timed(
 		struct linestack_marker *to, 
 		struct client *);
 
+/* Same as above, but only sends data (PRIVMSG/NOTICE) */
+G_MODULE_EXPORT gboolean linestack_send_object_timed_dataonly(
+		struct linestack_context *, 
+		const char *obj, 
+		struct linestack_marker *from, 
+		struct linestack_marker *to, 
+		struct client *);
+
+/* Same as above, but only sends data (PRIVMSG/NOTICE) */
+G_MODULE_EXPORT gboolean linestack_send_object_dataonly(
+		struct linestack_context *, 
+		const char *obj, 
+		struct linestack_marker *from, 
+		struct linestack_marker *to, 
+		struct client *);
+
+G_MODULE_EXPORT gboolean linestack_send_dataonly (
+		struct linestack_context *,
+		struct linestack_marker *from,
+		struct linestack_marker *to, /* Can be NULL for 'now' */
+		struct client *);
+
+G_MODULE_EXPORT gboolean linestack_send_timed_dataonly (
+		struct linestack_context *,
+		struct linestack_marker *from,
+		struct linestack_marker *to, /* Can be NULL for 'now' */
+		struct client *);
+
 G_MODULE_EXPORT gboolean linestack_send (
 		struct linestack_context *,
 		struct linestack_marker *from,
